fixes banner overflow glitch

--- a/source/less/modules/_banner.less
+++ b/source/less/modules/_banner.less
@@ -2,7 +2,7 @@
  * Modules/Banner
 *******************************************************************************/
 .banner {
-  overflow-x: hidden;
+  overflow: hidden;
 
   &--desc {
     position: relative;
